--- a/configs/BASE_RCNN_1gpu.yaml
+++ b/configs/BASE_RCNN_1gpu.yaml
@@ -18,10 +18,10 @@ MODEL:
   RESNETS:
     RES5_DILATION: 2
 INPUT:
-  MIN_SIZE_TRAIN: (300,)
-  MAX_SIZE_TRAIN: 500
-  MIN_SIZE_TEST: 300
-  MAX_SIZE_TEST: 500
+  MIN_SIZE_TRAIN: (600,)
+  MAX_SIZE_TRAIN: 1000
+  MIN_SIZE_TEST: 600
+  MAX_SIZE_TEST: 1000
 DATASETS:
   TRAIN: ("DET_train_30classes", "VID_train_15frames")
   TEST: ("VID_val_frames",)
@@ -37,4 +37,4 @@ SOLVER:
 TEST:
   IMS_PER_BATCH: 1
   DETECTIONS_PER_IMG: 300
-OUTPUT_DIR: /tmp/ron1
+#OUTPUT_DIR: /tmp/ron1
